--- a/manager/package.json
+++ b/manager/package.json
@@ -9,7 +9,8 @@
   "dependencies": {
     "firebase": "^4.9.1",
     "react": "16.2.0",
-    "react-native": "0.53.0"
+    "react-native": "0.53.0",
+    "redux-thunk": "^2.2.0"
   },
   "devDependencies": {
     "babel-jest": "22.2.0",
