--- a/manager/package.json
+++ b/manager/package.json
@@ -10,6 +10,7 @@
     "firebase": "^4.9.1",
     "react": "16.2.0",
     "react-native": "0.53.0",
+    "react-native-router-flux": "^4.0.0-beta.28",
     "redux-thunk": "^2.2.0"
   },
   "devDependencies": {
